[package]
name = "tokio-fs-slow"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
tokio = { version = "0.2", features = ["full"] }
